refresh README for repo showcase